<resources>
    <string name="app_name">MyShop</string>
    <string name="contentDescription">Image</string>
    <string name="title_login">LOGIN</string>
    <string name="emil_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="btn_login">login</string>
    <string name="Dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="Creat_an_account">Creat An Account</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confrim_password">Confrim Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login"><u>Login</u> </string>
    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_enter_mobile_number">Please enter Contact Number</string>

    <string name="err_msg_enter_confirm_password">Please enter confirm Password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password mismatch</string>
    <string name="err_msg_agree_terms_and_condition">Please agree to terms and condition</string>
    <string name="registery_successfull">Thanks for registering</string>
    <string name="Please_wait">Please Wait&#8230;</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="title_complete_profile">PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_stroage_permission_denied">Oops,you just denied the permission for storage.You can also allow it from settings</string>
    <string name="Image_selection_failed">Image Selection Failed</string>
    <string name="msg_profile_update_success">Profile Updated Successfully</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>
    <string name="title_Settings">Settings</string>
    <string name="title_settings">Setting</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="content_description">image</string>
    <string name="msg_profile_Edit_success">Profile Edited Successfully</string>
    <string name="title_add_product">ADD PRODUCT</string>
    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_price">Product Price ($)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>
    <string name="action_add_product">Add the product</string>
    <string name="no_products_added_yet">No Product Added Yet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="err_msg_select_product_image">Upload the product image</string>
    <string name="err_msg_enter_product_title">Please enter the product title</string>
    <string name="err_msg_enter_product_description">Plase enter the product description</string>
    <string name="err_msg_enter_product_quantity">Please enter the product quantity</string>
    <string name="err_msg_enter_product_price">Enter Product Price</string>
    <string name="Product_image_uploaded_successfully">Image Uploaded Successfully</string>
    <string name="Your_Product_Have_Been_Uploaded">Your product have been uploaded</string>

</resources>